--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,14 @@
 *.pydevproject
 .project
 .metadata
+.metadata/.log
+.metadata/.plugins/org.eclipse.core.resources/.projects/GODSProject/.markers
+.metadata/.plugins/org.eclipse.cire.resources/.safetable/org.eclipse.core.resources
+.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+.metadata/.plugins/org.eclipse.jdt.core/externalLibsTimeStamps
+.metadata/.plugins/org.eclipse.jdt.core/savedIndexNames.txt
+.metadata/.plugins/org.eclipse.jdt.ui/dialog_settings.xml
+.metadata/.plugins/org.eclipse.ui.workbench/workingsets.xml
 bin/
 tmp/
 *.tmp
