--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 .metadata
 .metadata/.log
 .metadata/.plugins/org.eclipse.core.resources/.projects/GODSProject/.markers
-.metadata/.plugins/org.eclipse.cire.resources/.safetable/org.eclipse.core.resources
+.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.resources
 .metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
 .metadata/.plugins/org.eclipse.jdt.core/externalLibsTimeStamps
 .metadata/.plugins/org.eclipse.jdt.core/savedIndexNames.txt
